--- a/src/main/webapp/AjudaGestaoEmpresas.xhtml
+++ b/src/main/webapp/AjudaGestaoEmpresas.xhtml
@@ -1,11 +1,11 @@
-<!DOCTYPE html> 
+<!DOCTYPE html>  <!-- localhost:8081/curso-jsf-e-primefaces-essencial/GestaoEmpresas.xhtml -->
 <html xmlns="http://www.w3.org/1999/xhtml"
 	xmlns:h="http://xmlns.jcp.org/jsf/html"
 	xmlns:f="http://xmlns.jcp.org/jsf/core">
 <h:head>
 
 	<meta charset="UTF-8" />
-	<title>Gestão Empresas</title>
+	<title>Ajuda</title>
 	
 	<h:outputStylesheet library="algaworks" name="estilo.css" />
 
@@ -16,15 +16,15 @@
 		<h:graphicImage library="algaworks" name="logo.png" />
 	</header>
 	
+	<h2>Ajuda</h2>
+	
 	<div id="conteudo">
 		<h:form>
-			<h:panelGrid columns="2">
-				<h:outputLabel value="Número: "/>
-				<h:outputText value="#{gestaoEmpresasBean.NUMERO}"/>
-				
-				<h:outputLabel />
-				<h:commandButton value="Salvar" />	
-			</h:panelGrid>
+			<p>Esta é a ajuda da página de cadastro de empresas</p>
+			
+			<p>
+				<h:commandLink value="Voltar" action="GestaoEmpresas?faces-redirect=true" />	
+			</p>			
 		</h:form>
 	</div>
 		
