--- a/src/main/webapp/AjudaGestaoEmpresas.xhtml
+++ b/src/main/webapp/AjudaGestaoEmpresas.xhtml
@@ -1,7 +1,8 @@
 <!DOCTYPE html>  <!-- localhost:8081/curso-jsf-e-primefaces-essencial/GestaoEmpresas.xhtml -->
 <html xmlns="http://www.w3.org/1999/xhtml"
 	xmlns:h="http://xmlns.jcp.org/jsf/html"
-	xmlns:f="http://xmlns.jcp.org/jsf/core">
+	xmlns:f="http://xmlns.jcp.org/jsf/core"
+	xmlns:p="http://primefaces.org/ui">
 <h:head>
 
 	<meta charset="UTF-8" />
