--- a/src/main/webapp/GestaoEmpresas.xhtml
+++ b/src/main/webapp/GestaoEmpresas.xhtml
@@ -84,6 +84,8 @@
 			modal="true" resizable="false" closeOnEscape="true">
 			<p:messages id="empresaMessages"/>
 			
+			<p:defaultCommand target="salvarCommandButton" scope="empresaDialog" />
+			
 			<h:panelGrid columns="2" id="empresaPanelGrid"
 				rendered="#{gestaoEmpresasBean.empresa ne null}">
 				<p:outputLabel value="Razão Social: " for="razaoSocial"/>
@@ -120,7 +122,7 @@
 					itemLabel="#{ramoAtividade.descricao}" itemValue="#{ramoAtividade}"  />
 				
 				<p:outputLabel />
-				<p:commandButton value="Salvar" actionListener="#{gestaoEmpresasBean.salvar}"
+				<p:commandButton id="salvarCommandButton" value="Salvar" actionListener="#{gestaoEmpresasBean.salvar}"
 					update="empresaPanelGrid empresaMessages"
 					oncomplete="if (!args.validationFailed) PF('empresaDialogWidgetVar').hide()" process="empresaDialog" />
 			</h:panelGrid>
